test/integration_test/specs/mysql-enc-pvc/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    field.cattle.io/projectId: "project-A"
  labels:
    field.cattle.io/projectId: "project-A"
    objectset.rio.cattle.io/hash: aba71c7b292b839a3c8b07cb60663855ca5e632d
  name: default-allow-all
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              field.cattle.io/projectId: "project-A"
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              field.cattle.io/projectId: "project-A"
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
